test/spec_vectors/align/ok/module_11.wat
(module (memory 0) (func (drop (i64.load align=8 (i32.const 0)))))