test/spec_vectors/align/fail/module_95.wat
(module (memory 0) (func (drop (f32.load align=8 (i32.const 0)))))